removed nav baground, fixed & z-index attibutes

--- a/css/index.css
+++ b/css/index.css
@@ -69,18 +69,16 @@ p {
 
 nav {
 	width:880px;
-	padding:10px 0;
+	padding:5% 0;
 
 	align-items: center;
 	display: flex;
 	justify-content: space-around;
-	background:#838B8B;
-	position: fixed;
-	z-index: 1;
+
 }
 
 nav a {
-	color: white;
+	color: darkgrey;
 	text-decoration-line: none;
 	font-size:1rem;
 	
@@ -114,7 +112,7 @@ nav a:hover {
 }
 
 .cta {
-	padding-top: 15%;
+	padding-top: 5%;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
